--- a/lab_note_2023-03-27.ipynb
+++ b/lab_note_2023-03-27.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "source": [
     "<img src=\"img/Robot-back.png\" alt=\"Robot Backside Photo\" style=\"width: 40%;\"/>\n",
-    "<img src=\"img/Robot-Screenshot-3-Unity.png\" alt=\"Robot Screenshot from Unity Simulation\" style=\"width: 40%;\"/>"
+    "<img src=\"img/Robot-Screenshot-3-Unity.png\" alt=\"Robot Screenshot from Unity Simulation\" style=\"width: 40%; float: right;\"/>"
    ]
   },
   {
